website port complete

--- a/_notebooks/2019-02-18-post-002.ipynb
+++ b/_notebooks/2019-02-18-post-002.ipynb
@@ -340,6 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "inputs, labels = next(iter(data_loader['train']))\n",
     "inputs = inputs.to(device)\n",
     "labels = labels.to(device)\n",
