--- a/_notebooks/2019-04-17-post-004.ipynb
+++ b/_notebooks/2019-04-17-post-004.ipynb
@@ -105,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class SPADE(Module):\n",
     "    def __init__(self, args, k):\n",
     "        super().__init__()\n",
@@ -163,6 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class SPADEResBlk(Module):\n",
     "    def __init__(self, args, k, skip=False):\n",
     "        super().__init__()\n",
@@ -225,6 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class SPADEGenerator(nn.Module):\n",
     "    def __init__(self, args):\n",
     "        super().__init__()\n",
@@ -276,6 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "def custom_model1(in_chan, out_chan):\n",
     "    return nn.Sequential(\n",
     "        spectral_norm(nn.Conv2d(in_chan, out_chan, kernel_size=(4,4), stride=2, padding=1)),\n",
@@ -330,6 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class VGGLoss(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -360,6 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class GANLoss(nn.Module):\n",
     "    def __init__(self, use_lsgan=True, target_real_label=1.0, target_fake_label=0.0,\n",
     "                 tensor=torch.FloatTensor):\n",
@@ -411,6 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "def weights_init(m):\n",
     "    classname = m.__class__.__name__\n",
     "    if classname.find('Conv') != -1:\n",
@@ -441,6 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "def conv_inst_lrelu(in_chan, out_chan):\n",
     "    return nn.Sequential(\n",
     "        nn.Conv2d(in_chan, out_chan, kernel_size=(3,3), stride=2, bias=False, padding=1),\n",
@@ -513,14 +521,14 @@
    "metadata": {},
    "source": [
     "## Resources\n",
-    "* SPADE Paper (link)\n",
-    "Official Implementation (link)\n",
-    "My Implementation (link)\n",
-    "pix2pixHD (link)\n",
-    "Spectral Normalization paper (link)\n",
-    "Spectral Norm blog (link)\n",
-    "Instance Normalization paper (link)\n",
-    "Instance norm other resources, blog, stack overflow"
+    "* My Implementation [link](https://github.com/KushajveerSingh/SPADE-PyTorch)\n",
+    "* SPADE Paper [link](https://arxiv.org/pdf/1903.07291v1.pdf)\n",
+    "* Official Implementation [link](https://github.com/NVlabs/SPADE)\n",
+    "* pix2pixHD [link](https://github.com/NVIDIA/pix2pixHD)\n",
+    "* Spectral Normalization paper [link](https://openreview.net/forum?id=B1QRgziT-)\n",
+    "* Spectral Norm blog [link](https://christiancosgrove.com/blog/2018/01/04/spectral-normalization-explained.html)\n",
+    "* Instance Normalization paper [link](https://arxiv.org/abs/1607.08022)\n",
+    "* Instance norm other resources, [blog](http://mlexplained.com/2018/11/30/an-overview-of-normalization-methods-in-deep-learning/), [stack overflow](https://stackoverflow.com/questions/45463778/instance-normalisation-vs-batch-normalisation)"
    ]
   }
  ],
