--- a/_notebooks/2019-05-06-post-005.ipynb
+++ b/_notebooks/2019-05-06-post-005.ipynb
@@ -124,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device('cuda')\n",
     "else:\n",
@@ -153,6 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "content_img = load_image(os.path.join(args.img_root, args.content_img), size=500)\n",
     "content_img = content_img.to(device)\n",
     "\n",
@@ -244,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "# Downsampling function\n",
     "def conv_down(in_c, out_c, stride=2):\n",
     "    return nn.Conv2d(in_c, out_c, kernel_size=3, stride=stride, padding=1)\n",
@@ -276,6 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "# Helper class for BottleneckBlock\n",
     "class ConvLayer(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels, kernel_size, stride=1):\n",
@@ -346,6 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "class HRNet(nn.Module):\n",
     "    \"\"\"\n",
     "    For model reference see Figure 2 of the paper https://arxiv.org/pdf/1904.11617v1.pdf.\n",
@@ -430,6 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "def get_features(img, model, layers=None):\n",
     "    \"\"\"\n",
     "    Use VGG19 to extract features from the intermediate layers.\n",
@@ -509,6 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# collapse-show\n",
     "def get_gram_matrix(img):\n",
     "    \"\"\"\n",
     "    Compute the gram matrix by converting to 2D tensor and doing dot product\n",
