--- a/_notebooks/2018-09-14-post-0001.ipynb
+++ b/_notebooks/2018-09-14-post-0001.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [notes, machine-learning]\n",
+    "- categories: [tutorial]\n",
     "- image: images/preview/post_001.jpeg\n",
     "- badges: false"
    ]
