--- a/_notebooks/2020-07-10-post-0010.ipynb
+++ b/_notebooks/2020-07-10-post-0010.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Complete Walkthrough of Neural Network Initialization (Code + Maths)\n",
-    "> Kaiming Init + Fixup Init is discussed in detail and initialization condition for Mish activation function is derived."
+    "# Deep Learning Model Initialization in Detail (with derivation for Mish+code)\n",
+    "> Kaiming and Fixup initialization are discussed in detail. Initialization function for Mish activation function is derived.\n",
+    "- toc: true\n",
+    "- comments: true\n",
+    "- author: Kushajveer Singh\n",
+    "- categories: [tutorial]\n",
+    "- badges: true"
    ]
   },
   {
