--- a/_notebooks/2020-05-13-post-0008.ipynb
+++ b/_notebooks/2020-05-13-post-0008.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [tutorial]\n",
+    "- categories: [notes]\n",
     "- badges: false"
    ]
   },
