--- a/_notebooks/2020-07-10-post-0010.ipynb
+++ b/_notebooks/2020-07-10-post-0010.ipynb
@@ -15,13 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gzip, pickle, math\n",
     "from pathlib import Path\n",
-    "from collections import defaultdict\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,28 +36,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Get Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "I use MNIST dataset. The dataset choice does not matter much as the things discussed in the notebook are general and apply to every dataset."
+    "MNIST dataset is used for quick experimentation. The things discussed in the post are independent of the dataset used."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_data():\n",
@@ -68,6 +61,7 @@
     "    path = download_data(MNIST_URL, 'extra/mnist.pkl.gz')\n",
     "    with gzip.open(path, 'rb') as f:\n",
     "        ((x_train, y_train), (x_valid, y_valid), _) = pickle.load(f, encoding='latin-1')\n",
+    "    \n",
     "    # By default these are numpy arrays, so convert them to pytorch tensors\n",
     "    return map(torch.tensor, (x_train,y_train,x_valid,y_valid))\n",
     "\n",
@@ -77,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_train, y_train, x_valid, y_valid = get_data()"
@@ -88,12 +80,10 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalize input data also\n",
+    "# Normalize input data (mean=0, std=1)\n",
     "train_mean, train_std = x_train.mean(), x_train.std()\n",
     "\n",
     "x_train = normalize(x_train, train_mean, train_std)\n",
@@ -103,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -128,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -149,35 +135,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "Now the inputs come from a distribution of $mean = 0$ and $std = 1$ (or $var = 1$ as $var = std^2$) \n",
-    "\n",
-    "**Note**:- This fact will be used later, when we derive formula for variance."
+    "Now the input comes from a distribution of $mean = 0$ and $std = 1$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Objective"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "We want the **activations** in our neural network to have 0.5 mean and standard deviation of 1. Now by activation I mean the output of `activation_function(Linear(x, w, b))` layer which can be simplified as $max(x@w+b, 0)$.\n",
-    "\n",
-    "**Note**:- Because we take the ReLU of activations, the mean gets shifted from 0 to 0.5. If we considered the activations after Linear layer, the mean would be 0.\n",
-    "\n",
-    "**But what about Batch Norm?** The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over tie for the ease of training. Thus, BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minimas at the start of the training if we do not initialize out networks properly. (You can check my other [notebook](https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb) in which I discuss this in detail).\n",
+    "We want **activations** in the neural network to have mean=0, std=1. By activation I mean the output of `activation_function(Linear(x, w, b))`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: Convolution layer can also be represented as a linear layer. So convolution layer also fits into the above definition. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Batch Normalization is not used in this post**. The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over the entire network for the ease of training. BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minima's at the start of the training if the networks are not initialized properly. (You can check my other [notebook](https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb) in which I discuss this in detail).\n",
     "\n",
     "For this reason, I will not include BatchNorm in this discussion."
    ]
