--- a/_notebooks/2020-07-10-post-0011.ipynb
+++ b/_notebooks/2020-07-10-post-0011.ipynb
@@ -165,25 +165,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Batch Normalization is not used in this post**. The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over the entire network for the ease of training. BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minima's at the start of the training if the networks are not initialized properly. (You can check my other [notebook](https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb) in which I discuss this in detail).\n",
-    "\n",
-    "For this reason, I will not include BatchNorm in this discussion."
+    "**Batch Normalization is not used in this post**. The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over the entire network for the ease of training. BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minima's at the start of the training if the networks are not initialized properly. (You can check my other [notebook](https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb) in which I discuss this in detail). For this reason, I will not include BatchNorm in this discussion."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Kaiming Init (Code)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Kaiming Init (He Init) is the most commonly used initialization. It's implementation is as follows:"
    ]
@@ -191,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "w1 = torch.randn(784, 50) * math.sqrt(2/784)\n",
@@ -204,9 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "And that's it. You sample from a *Normal Gaussian Distribution (mean=0, std=1)* and then change it's standard deviation to *math.sqrt(2/num_inputs)*. This preserves your activations std in the forward propagation.\n",
     "\n",
