post_0010 local run

--- a/_notebooks/2019-06-26-post-0010.ipynb
+++ b/_notebooks/2019-06-26-post-0010.ipynb
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/post_0010/04.jpeg \"Figure 4. Increasing validation/test loss indicates overfitting. In (a) the sharp increase in loss for yellow curve near lr=0.005 is not a sign of overfitting but is casued by instabilities in the training due to high learning rate.\")"
+    "![](images/post_0010/04.jpeg \"Figure 4. Increasing validation/test loss indicates overfitting. In [a] the sharp increase in loss for yellow curve near lr=0.005 is not a sign of overfitting but is casued by instabilities in the training due to high learning rate.\")"
    ]
   },
   {
