--- a/_notebooks/2020-07-10-post-0011.ipynb
+++ b/_notebooks/2020-07-10-post-0011.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning Model Initialization in Detail (with derivation for ReLU+code)\n",
-    "> Kaiming and Fixup initialization are discussed in detail. Initialization function for ReLU is derived in detail. Also, provide a general recipe for finding init function of any activation function.\n",
+    "# Deep Learning Model Initialization in Detail\n",
+    "> Kaiming initialization is discussed in detail. Initialization function for ReLU is derived in detail.\n",
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
@@ -19,8 +19,7 @@
    "source": [
     "The following papers are discussed in this post:\n",
     "1. Understanding the difficulty of training deep feedforward neural networks [paper](http://proceedings.mlr.press/v9/glorot10a.html)\n",
-    "2. Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification [paper](https://arxiv.org/abs/1502.01852)\n",
-    "3. Fixup Initialization: Residual Learning Without Normalization [paper](https://arxiv.org/abs/1901.09321)"
+    "2. Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification [paper](https://arxiv.org/abs/1502.01852)"
    ]
   },
   {
@@ -161,21 +160,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want **activations** in the neural network to have mean=0, std=1. By activation I mean the output of `activation_function(Linear(x, w, b))`."
+    "We want **activations** in the neural network to have mean=0, std=1. By activation I mean the output of `activation_function(Linear(x, w, b))`. Convolution layer can also be represented as a linear layer (take a vector of 0's, replace the 0's where the convolution filter would be applied)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: Convolution layer can also be represented as a linear layer. So convolution layer also fits into the above definition. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Batch Normalization is not used in this post**. The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over the entire network for the ease of training. BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minima's at the start of the training if the networks are not initialized properly. (You can check my other [notebook](https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb) in which I discuss this in detail). For this reason, I will not include BatchNorm in this discussion."
+    "> Important: Batch Normalization is not used in this post. BatchNorm is still needed because if we just use Kaiming init in ResNet, the weights would explode. This happens due to the shortcut connection which doubles the variance, thus exponentially increasing the weights."
    ]
   },
   {
@@ -217,9 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Why Initialization is Important?"
    ]
@@ -227,8 +217,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Example 1"
@@ -399,8 +388,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Example 2"
@@ -646,8 +634,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Example 3"
@@ -1633,11 +1620,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Derivation for LeakyReLU activation function\n",
+    "$$\n",
+    "LeakyReLU(x) =\n",
+    "\\begin{cases}\n",
+    "x\\text{ if }x\\geq 0\\\\\n",
+    "ax\\text{ if }x<0\n",
+    "\\end{cases}\n",
+    "= \\max(ax,x), a>0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 1**: Find $\\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$.\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbb{E}[x_l^2] &= \\mathbb{E}[\\max(ay_{l-1},y_{l-1})^2] \\\\\n",
+    " &= \\frac{1}{2}\\mathbb{E}[a^2y_{l-1}^2]\\text{ } \\Bigr|_{y_{l-1}\\le 0} + \\frac{1}{2}\\mathbb{E}[y_{l-1}^2]\\text{ }\\Bigr|_{y_{l-1}>0} \\\\\n",
+    " &= \\frac{1}{2}a^2\\mathbb{E}[y_{l-1}^2]\\text{ } \\Bigr|_{y_{l-1}\\le 0} + \\frac{1}{2}\\mathbb{E}[y_{l-1}^2]\\text{ }\\Bigr|_{y_{l-1}>0} \\\\\n",
+    " &= \\frac{1}{2}a^2Var[y_{l-1}]+\\frac{1}{2}Var[y_{l-1}] \\\\\n",
+    " &= \\frac{1+a^2}{2}Var[y_{l-1}]\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 2**: Compute variance of each layer.\n",
+    "$$\n",
+    "Var[y_l] = n_lVar[w_l]\\left(\\frac{1+a^2}{2}Var[y_{l-1}]\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 3**: Compute variance at last layer.\n",
+    "$$\n",
+    "Var[y_L] = Var[y_1]\\left(\\prod\\limits_{l=2}^{L}\\frac{1+a^2}{2}n_lVar[w_l]\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4**: Make the variance constant (=1 in this case would be enough).\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\frac{1+a^2}{2}n_lVar[w_l] &= 1 \\\\\n",
+    "Var[w_l] &= \\frac{2}{1+a^2}\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This leads to a zero-mean gaussian whose standard deviation is $\\sqrt{2/(1+a^2)}$ and the biases are initialized to 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Weight initialization plays an important role in the training of a model. It can speed up the training process. Kaiming init is a good default initialization technique for most of the tasks."
+   ]
   }
  ],
  "metadata": {
