--- a/_posts/2020-07-10-post-0011.md
+++ b/_posts/2020-07-10-post-0011.md
@@ -1,7 +1,7 @@
 ---
 keywords: fastai
-description: Kaiming and Fixup initialization are discussed in detail. Initialization function for ReLU is derived in detail. Also, provide a general recipe for finding init function of any activation function.
-title: Deep Learning Model Initialization in Detail (with derivation for ReLU+code)
+description: Kaiming initialization is discussed in detail. Initialization function for ReLU is derived in detail.
+title: Deep Learning Model Initialization in Detail
 toc: true
 comments: true
 author: Kushajveer Singh
@@ -33,7 +33,6 @@ layout: notebook
 <ol>
 <li>Understanding the difficulty of training deep feedforward neural networks <a href="http://proceedings.mlr.press/v9/glorot10a.html">paper</a></li>
 <li>Delving Deep into Rectifiers: Surpassing Human-Level Performance on ImageNet Classification <a href="https://arxiv.org/abs/1502.01852">paper</a></li>
-<li>Fixup Initialization: Residual Learning Without Normalization <a href="https://arxiv.org/abs/1901.09321">paper</a></li>
 </ol>
 
 </div>
@@ -231,21 +230,14 @@ layout: notebook
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We want <strong>activations</strong> in the neural network to have mean=0, std=1. By activation I mean the output of <code>activation_function(Linear(x, w, b))</code>.</p>
+<p>We want <strong>activations</strong> in the neural network to have mean=0, std=1. By activation I mean the output of <code>activation_function(Linear(x, w, b))</code>. Convolution layer can also be represented as a linear layer (take a vector of 0's, replace the 0's where the convolution filter would be applied).</p>
 
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>{% include note.html content='Convolution layer can also be represented as a linear layer. So convolution layer also fits into the above definition. ' %}</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Batch Normalization is not used in this post</strong>. The purpose of BatchNorm is to normalize the activations and then scale them by using a learned mean and standard deviation. So the idea of batch normalization is to have the same distribution over the entire network for the ease of training. BatchNorm reduces the strong dependence on initialization. However, initialization is still important because we can get into bad local minima's at the start of the training if the networks are not initialized properly. (You can check my other <a href="https://github.com/KushajveerSingh/deep_learning/blob/master/deep_learning/paper_implementations/Leslie%20N.%20Smith%20papers%20notebook/main.ipynb">notebook</a> in which I discuss this in detail). For this reason, I will not include BatchNorm in this discussion.</p>
+<p>{% include important.html content='Batch Normalization is not used in this post. BatchNorm is still needed because if we just use Kaiming init in ResNet, the weights would explode. This happens due to the shortcut connection which doubles the variance, thus exponentially increasing the weights.' %}</p>
 
 </div>
 </div>
@@ -1920,6 +1912,82 @@ $$Var[y_l] = n_lVar[w_l]\mathbb{E}[x_l^2]$$
 <li>Compute the variance at the last layer $$Var[y_L] = Var[y_1]*Var[y_2]\cdots*Var[y_{L-1}]$$.</li>
 <li>Find a way to make the variance at the last layer constant.</li>
 </ol>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Derivation-for-LeakyReLU-activation-function">Derivation for LeakyReLU activation function<a class="anchor-link" href="#Derivation-for-LeakyReLU-activation-function"> </a></h3>$$
+LeakyReLU(x) =
+\begin{cases}
+x\text{ if }x\geq 0\\
+ax\text{ if }x&lt;0
+\end{cases}
+= \max(ax,x), a&gt;0
+$$
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Step 1</strong>: Find $\mathbb{E}[x_l^2]$ in terms of $Var[y_{l-1}]$.
+$$
+\begin{split}
+\mathbb{E}[x_l^2] &amp;= \mathbb{E}[\max(ay_{l-1},y_{l-1})^2] \\
+ &amp;= \frac{1}{2}\mathbb{E}[a^2y_{l-1}^2]\text{ } \Bigr|_{y_{l-1}\le 0} + \frac{1}{2}\mathbb{E}[y_{l-1}^2]\text{ }\Bigr|_{y_{l-1}&gt;0} \\
+ &amp;= \frac{1}{2}a^2\mathbb{E}[y_{l-1}^2]\text{ } \Bigr|_{y_{l-1}\le 0} + \frac{1}{2}\mathbb{E}[y_{l-1}^2]\text{ }\Bigr|_{y_{l-1}&gt;0} \\
+ &amp;= \frac{1}{2}a^2Var[y_{l-1}]+\frac{1}{2}Var[y_{l-1}] \\
+ &amp;= \frac{1+a^2}{2}Var[y_{l-1}]
+\end{split}
+$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Step 2</strong>: Compute variance of each layer.
+$$
+Var[y_l] = n_lVar[w_l]\left(\frac{1+a^2}{2}Var[y_{l-1}]\right)
+$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Step 3</strong>: Compute variance at last layer.
+$$
+Var[y_L] = Var[y_1]\left(\prod\limits_{l=2}^{L}\frac{1+a^2}{2}n_lVar[w_l]\right)
+$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Step 4</strong>: Make the variance constant (=1 in this case would be enough).
+$$
+\begin{split}
+\frac{1+a^2}{2}n_lVar[w_l] &amp;= 1 \\
+Var[w_l] &amp;= \frac{2}{1+a^2}
+\end{split}
+$$</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>This leads to a zero-mean gaussian whose standard deviation is $\sqrt{2/(1+a^2)}$ and the biases are initialized to 0.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion"> </a></h2><p>Weight initialization plays an important role in the training of a model. It can speed up the training process. Kaiming init is a good default initialization technique for most of the tasks.</p>
 
 </div>
 </div>
