--- a/_notebooks/2019-02-18-post-0002.ipynb
+++ b/_notebooks/2019-02-18-post-0002.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [tutorial]\n",
+    "- categories: [discussion]\n",
     "- image: images/preview/post_002.png\n",
     "- badges: false"
    ]
