--- a/_notebooks/2019-06-26-post-0010.ipynb
+++ b/_notebooks/2019-06-26-post-0010.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [tutorial, paper-implementation]\n",
+    "- categories: [discussion]\n",
     "- badges: true"
    ]
   },
