--- a/_notebooks/2020-06-19-post-0009.ipynb
+++ b/_notebooks/2020-06-19-post-0009.ipynb
@@ -9,7 +9,7 @@
     "- toc: true\n",
     "- comments: true\n",
     "- author: Kushajveer Singh\n",
-    "- categories: [notes, conference]\n",
+    "- categories: [notes]\n",
     "- badges: false"
    ]
   },
