--- a/_posts/2019-02-18-post-0002.md
+++ b/_posts/2019-02-18-post-0002.md
@@ -5,7 +5,7 @@ title: "Training AlexNet with tips and checks on how to train CNNs: Practical CN
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [tutorial]
+categories: [discussion]
 image: images/preview/post_002.png
 badges: false
 nb_path: _notebooks/2019-02-18-post-0002.ipynb
