--- a/_posts/2019-06-26-post-0010.md
+++ b/_posts/2019-06-26-post-0010.md
@@ -5,7 +5,7 @@ title: Reproducing Cyclic Learning papers + SuperConvergence using fastai
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [tutorial, paper-implementation]
+categories: [discussion]
 badges: true
 nb_path: _notebooks/2019-06-26-post-0010.ipynb
 layout: notebook
