--- a/_posts/2020-06-19-post-0009.md
+++ b/_posts/2020-06-19-post-0009.md
@@ -5,7 +5,7 @@ title: "STOC 2020: Session Notes"
 toc: true
 comments: true
 author: Kushajveer Singh
-categories: [notes, conference]
+categories: [notes]
 badges: false
 nb_path: _notebooks/2020-06-19-post-0009.ipynb
 layout: notebook
